# android_native_webrtc

Siprtc/: settings.gradle
Siprtc/app/: build.gradle
Siprtc/app/src/androidTest/java/org/appspot/siprtc/: ExampleInstrumentedTest.java
Siprtc/app/src/main/: AndroidManifest.xml
Siprtc/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Siprtc/app/src/main/java/org/appspot/siprtc/: MainActivity.java
Siprtc/app/src/main/res/values/: strings.xml  themes.xml
Siprtc/app/src/main/res/values-night/: themes.xml
Siprtc/app/src/test/java/org/appspot/siprtc/: ExampleUnitTest.java
Siprtc/gradle/wrapper/: gradle-wrapper.properties
Siprtc/scripts/: copy_headers.sh
scripts/: copy_headers.sh
webrtc/patch/: 0001-buildtools-m105-d4d55fbf055779487e1b342916c4b12cad65.patch  0001-libsrtp-m105-5b7c744eb8310250ccc534f3f86a2015b3887a0.patch  0001-src-build-m105-bed2979286743b965832101fd1632e0b043f2.patch  0001-src-m105-dc5cf31cad576376abd3aa6306169453cfd85ba5.patch
webrtc/scripts/: build.sh  copy_headers.sh
